--- a/twitter/Base.lproj/LaunchScreen.storyboard
+++ b/twitter/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="ATZ-c1-mcb">
-                                <rect key="frame" x="112.66666666666669" y="403" width="150" height="16"/>
+                                <rect key="frame" x="112.66666666666669" y="344.33333333333331" width="150" height="133.33333333333331"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
